--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@ layout: default
   <!-- Portfolio Projects Section with Swipeable Cards -->
   <section class="portfolio-section">
     <div class="portfolio-section-inner">
-      <h2>PORTFOLIO</h2>
+      <h2>Here are some of the things I have worked on</h2>
       
       <!-- Swipeable Card Container -->
       <div class="carousel-container">
@@ -62,7 +62,7 @@ layout: default
   <!-- Blog Posts Section (Two-Column with Right Empty) - Dynamic -->
   <section class="blog-section">
     <div class="blog-section-inner">
-      <h2>WRITING</h2>
+      <h2>What has been on my mind?</h2>
       <div class="post-grid">
         {% assign blog_posts = site.posts | where: "categories", "blog" %}
         {% for post in blog_posts limit:3 %}
