--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,13 +11,10 @@
     
     <!-- Column 2: Site Map -->
     <div class="footer-column">
-      <h3>SITE MAP</h3>
       <nav class="footer-nav">
         <ul class="footer-links">
-          <li><a href="{{ '/' | relative_url }}">HOME</a></li>
-          <li><a href="{{ '/about' | relative_url }}">ABOUT</a></li>
-          <li><a href="{{ '/blog' | relative_url }}">BLOG</a></li>
-          <li><a href="{{ '/projects' | relative_url }}">PROJECTS</a></li>
+          <li><a href="{{ '/' | relative_url }}">HOME</a></li><br>
+          <li><a href="{{ '/impressum/' | relative_url }}">IMPRINT</a></li><br>
         </ul>
       </nav>
     </div>
