--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@ layout: default
             {% endif %}
             <div class="portfolio-card-content">
               <h3><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h3>
-              <p>{{ post.excerpt | strip_html | truncatewords: 20 }}</p>
+              <p>{{ post.description | strip_html | truncatewords: 20 }}</p>
               <a href="{{ post.url | relative_url }}" class="view-project">VIEW PROJECT →</a>
             </div>
           </div>
