--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -234,7 +234,7 @@ a:hover {
 
 .portfolio-card img {
   width: 100%;
-  height: auto;
+  aspect-ratio: 16 / 9;
   object-fit: cover;
   display: block;
 }
