add - website tracking link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
     {% feed_meta %}
     {% seo %}
 
+    <!-- Tracking -->
+    <script src="https://tinylytics.app/embed/7ZMWAxo3SGfyS79F-9JM.js" defer></script>
+
     <!-- Favicon-->
     <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
