--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,23 +5,31 @@ layout: default
 <div class="home-container">
   <!-- Hero Section (Full Width) -->
   <section class="hero-section">
-    <div class="slideshow-container">
-      <div class="slideshow-images">
-        {% for image in site.data.slideshow %}
-          <div class="slideshow-image {% if forloop.first %}active{% endif %}" 
-              style="background-image: url('{{ "/assets/imgs/slideshow/" | append: image | relative_url }}')"></div>
-        {% endfor %}
+    <div class="hero-content">
+      <div class="hero-model">
+            <model-viewer 
+              camera-controls 
+              auto-rotate
+              rotation-per-second="30deg"
+              touch-action="pan-y" 
+              autoplay 
+              ar 
+              ar-modes="webxr scene-viewer" 
+              scale="0.2 0.2 0.2" 
+              shadow-intensity="1" 
+              src="{{ '/assets/3D/3D-placeholder.glb' | relative_url }}" 
+              alt="A 3D model of a mannequin (placeholder)">
+            </model-viewer>
       </div>
     </div>
   </section>
   
-  <!-- Main Content (Two-Column with Right Empty) - Hardcoded -->
+  <!-- Main Content -->
   <section class="main-content">
     <div class="main-content-inner">
       <h2> {{site.title }}</h2>
       <p> {{site.description }}</p>
     </div>
-    <!-- Empty right column -->
   </section>
 
   <!-- Portfolio Projects Section with Swipeable Cards -->
