add - 3d model of joost

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,8 +17,8 @@ layout: default
               ar-modes="webxr scene-viewer" 
               scale="0.2 0.2 0.2" 
               shadow-intensity="1" 
-              src="{{ '/assets/3D/3D-placeholder.glb' | relative_url }}" 
-              alt="A 3D model of a mannequin (placeholder)">
+              src="{{ '/assets/3D/Joost_dance.glb' | relative_url }}" 
+              alt="A 3D model of myself waving and greeting you">
             </model-viewer>
       </div>
     </div>
